--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 							</header>
 							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
 							<h3>Die Smarties</h3>
-							<p>Unsere Smarties: href="#picture"><span>Magentacloud<p>
+							<p><Unsere Smarties:> href="#picture"><span>Magentacloud</span><p>
 							<p>2022-02-28<p>
 							<p>Zur Erinnerung an Kai,<p>
 							<p>Gründer und die Seele der Smarties.<p>
