--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<h3>Foto Galerie</h3>
 	</header>
 	</header>
-			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html"style="color:#ff00ff">"Link: Fotos Münsterland-Smarties"</a></h1> <br>
+			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html"style="color:#ff00ff">"zur Magentacloud: Fotos Münsterland-Smarties"</a></h1> <br>
                            <h1> # Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine Message um Zugang zu erhalten # </h1> <br>
 	</header>
 <p></p>				
