--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 							</header>
 							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
 							<h3>Die Smarties</h3>
-							<p>Unsere Smarties: <a href="#picture" >Magentacloud</a><p>
+							<p>Unsere Smarties: <a href="#picture" >Fotos, ab in die Magentacloud</a><p>
 							<p>2022-02-28<p>
 							<p>Zur Erinnerung an Kai,<p>
 							<p>Gründer und die Seele der Smarties.<p>
