--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h3>Unser Stammtisch</h3>
 							</header>
 							<p>     Wann und wo treffen wir uns? </p>
-								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am, <br>
+								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat um 15.00 Uhr am, <br>
 								http://www.cafe-jedermann.de <br>
 								Wettringer Str. 60 <br>
 								48485 Neuenkirchen <br>
@@ -101,8 +101,13 @@
 							</header>
 							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
 							   Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. <br> 
-							   Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
-</p>
+							   Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.<br>
+							nächster Termin:<br>
+							Samstag 18.02.2023:1800 Uhr<br>
+							Oriental Gormet<br>
+							Siemens Straße 2<br>
+							48599 Gronau
+					</p>
 								</section>
 
 					</div>
@@ -275,7 +280,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 												
 												</li>
 												<li class="icon brands fa-facebook-f">
-													<a href="#">facebook.com/untitled</a>
+													<a href="https://www.facebook.com/muensterlandsmarties.html">facebook.com/muensterlandsmarties</a>
 												</li>
 											</ul>
 										</div>
