--- a/index.html
+++ b/index.html
@@ -74,19 +74,24 @@
 								<h3>Unser Stammtisch</h3>
 							</header>
 							<p>     Wann und wo treffen wir uns? </p>
-								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat um 15.00 Uhr am, <br>
+								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat. <br>
+								"Unsere alten Ftreffpunkte":<br>
 								http://www.cafe-jedermann.de <br>
 								Wettringer Str. 60 <br>
 								48485 Neuenkirchen <br>
-								</p>
+								oder<br>
 								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" 
 								</p>
-								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden. <br>
-								oder weitere Terminabsprachen kannst Du auch im Smart-Forum.de finden. <br>
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com/Muensterlandsmarties finden. <br>
+								oder auch im Smart-Forum.de finden. <br>
 								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
-								Smarties im westlichen Münsterland "....oder klicke einfach auf: <br>
+								Smarties im westlichen Münsterland ".... oder gehe auf: <br>
 								http://www.smart-forum.de 
 								.</p>
+					</li>
+						<li class="icon brands fa-facebook-f">
+							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/gruppe</a>
+						</li>
 							</section>
 
 					</div>
