--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 								.</p>
 					</li>
 						<li class="icon brands fa-facebook-f">
-							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/gruppe</a>
+							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
 						</li>
 							</section>
 
