--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
 								Smarties im westlichen Münsterland ".... oder gehe auf: <br>
 								http://www.smart-forum.de <br>
-								
+								oder auch hier ->
 					</li>
 						<li class="icon brands fa-facebook-f">
 							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
