--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
 								oder<br>
 								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" 
 								</p>
-								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com/Muensterlandsmarties finden. <br>
-								oder auch im Smart-Forum.de finden. <br>
-								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
-								Smarties im westlichen Münsterland ".... oder gehe auf: <br>
-								http://www.smart-forum.de <br>
-								oder hier ->
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com 
+								oder auch im Smart-Forum.de finden<br>
+								Dort gehst Du einfach im Smart-Forum auf SMARTies Regional und wählst dann unseren Forumsbeitrag
+								Smarties im westlichen Münsterland "....  <br>
+					</li>
+						<li class="icon brands fa-facebook-f">
+								<a href="https://www.smart-forum.de.">Smart-Forum</a>
+						</li>			
 					</li>
 						<li class="icon brands fa-facebook-f">
 							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
