--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								Dort gehst Du einfach im Smart-Forum auf SMARTies Regional und wählst dann unseren Forumsbeitrag
 								Smarties im westlichen Münsterland "....  <br>
 					</li>
-						<li class="icon brands Fab Fa-Html5">
+						<li class="icon brands Fa-Html5">
 								<a href="https://www.smart-forum.de.">Smart-Forum</a>
 						</li>			
 					</li>
