--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
 								<h3>Unser Stammtisch</h3>
 							</header>
 							<p>     Wann und wo treffen wir uns? </p>
-								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat. <br>
+								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat, <br>
+								siehe auch unter "Neuigkeiten" den aktuellen Termin.
 							</p>
-								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com 
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com <br> 
 								oder auch im Smart-Forum.de finden<br>
 								Dort gehst Du einfach im Smart-Forum auf SMARTies Regional und wählst dann unseren Forumsbeitrag
 								Smarties im westlichen Münsterland "....  <br>
 					</li>
-						<li class="icon brands Fa-Html5">
+						<li class="icon brands fa-Html5">
 								<a href="https://www.smart-forum.de.">Smart-Forum</a>
 						</li>			
 					</li>
@@ -94,7 +95,7 @@
 								Wettringer Str. 60 <br>
 								48485 Neuenkirchen <br>
 								oder<br>
-								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" 
+								Alternativ am Offlumer See in 48485 Neuenkirchen, am Cafe Jedermann vorbei..
 								
 							</section>
 
