--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								Dort gehst Du einfach im Smart-Forum auf SMARTies Regional und wählst dann unseren Forumsbeitrag
 								Smarties im westlichen Münsterland "....  <br>
 					</li>
-						<li class="icon brands fa-Html5">
+						<li class="icon brands fa-fa">
 								<a href="https://www.smart-forum.de.">Smart-Forum</a>
 						</li>			
 					</li>
