--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</header>
 							<p>     Wann und wo treffen wir uns? </p>
 								Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat, <br>
-								siehe auch unter "Neuigkeiten" den aktuellen Termin.
+								siehe auch unter "navpannel": "Neuigkeiten", den aktuellen Termin.
 							</p>
 								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com <br> 
 								oder auch im Smart-Forum.de finden<br>
