--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
 						</li>
 							<p></p>
-								"Unsere alten Ftreffpunkte":<br>
+								"Unsere alten MLS Treffpunkte":<br>
 								http://www.cafe-jedermann.de <br>
 								Wettringer Str. 60 <br>
 								48485 Neuenkirchen <br>
