--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="index.html"><span>MLS-start</span></a></li
-						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li
+						<li><a class="icon solid fa-home" href="index.html"><span>MLS-start</span></a></li>
+						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li>
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 						</ul>
 						</nav>
