--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 									<form method="post" action="#">
 										<div class="row gtr-50">
 											<div class="col-6 col-12-small">
-												<input name="name" placeholder="Name" type="text" />
+												<input name="name" placeholder="Vorname, Name" type="text" />
 											</div>
 											<div class="col-6 col-12-small">
 												<input name="email" placeholder="Email" type="text" />
