--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Zurzeit ohne Funktion! <br> Fragen.. Neuigkeiten..? <strong>schreibe uns:</strong></h2>
+							<h2><strong>Kontaktformular zZ nicht aktiv!</strong></h2>
+							<h2>Fragen.. Neuigkeiten..? <strong>schreibe uns:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
