--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="#" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+										<!--	 <a href="#" class="form-button-submit button icon solid fa-envelope">Send Message</a> -->
 											</div>
 										</div>
 									</form>
