--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"> <img src="images/midsize-mls_logo.jpg" alt="" /></a>
+							<a href="#" class="image featured"> <img src="images/welcome.jpg" alt="" /></a>
 							<header>
 								<h3>Unser Stammtisch</h3>
 							</header>
