--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 		<!-- Banner -->
 		<section id="banner">
-			<img src="images/banner002.jpg" align=“middel“ alt="" />
+			<img src="images/banner002.jpg" align=“right“ alt="" />
 
 		</section>
 
