--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 		</section>
 
 		<!-- Banner -->
-		<section id="banner" class="image featured">
+		<section id="image-banner" class="image featured">
 			<img src="images/banner002.jpg" alt="" />
 
 		</section>
