--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<header>
 					<h2>Herzlich Willkommen bei den <strong>Münsterland Smarties</strong>!</h2>
 				</header>
-				
+
 				<div class="row aln-center">
 					<div class="col-4 col-6-medium col-12-small">
 
@@ -252,19 +252,14 @@
 						<!-- Post -->
 						<article class="box post">
 							<header>
-
+								<h2>Die Smarties</h2>
 							</header>
-							<h3>Die Smarties</h3>
-							<p>Unsere Smarties: <a href="#picture">Fotos, ab in die Magentacloud</a>
 							<p>
-							<p>2022-02-18
-							<p>
-							<p>Zur Erinnerung an Kai,
-							<p>
-							<p>Gründer und die Seele der Smarties.
-							<p>
-							<p>Du wirst uns immer im Gedächnis bleiben!
-							<p>
+								Unsere Smarties: <a href="#picture">Fotos, ab in die Magentacloud</a> <br>
+								2022-02-18 <br>
+								Zur Erinnerung an Kai, <br>
+								Gründer und die Seele der Smarties. <br>
+								Du wirst uns immer im Gedächnis bleiben!
 							</p>
 							<ul class="actions">
 								<li><a href="#" class="button icon solid fa-file">nach oben</a></li>
