--- a/index.html
+++ b/index.html
@@ -104,211 +104,228 @@
 
 						<!-- Feature -->
 						<section id="news">
-							<section>
-								<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
-								<header>
-									<h3>Neuigkeiten</h3>
-								</header>
-								<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
-								Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren.
-								<br>
-								Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
-								dann mal auf einem Stammtisch begrüßen.<br>
-								nächster Termin:<br>
-								Samstag 18.02.2023:1800 Uhr<br>
-								Oriental Gormet<br>
-								Siemens Straße 2<br>
-								48599 Gronau
-								</p>
-							</section>
-
+							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
+							<header>
+								<h3>Neuigkeiten</h3>
+							</header>
+							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
+							Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren.
+							<br>
+							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
+							dann mal auf einem Stammtisch begrüßen.<br>
+							nächster Termin:<br>
+							Samstag 18.02.2023:1800 Uhr<br>
+							Oriental Gormet<br>
+							Siemens Straße 2<br>
+							48599 Gronau
+							</p>
+						</section>
 					</div>
 				</div>
 			</div>
-			<section id="picture">
+			<!-- Banner -->
+			<section id="image-banner" class="image featured">
+				<img src="images/banner002.jpg" alt="" />
 			</section>
-			<header>
-				<h3>Foto Galerie</h3>
-			</header>
-			</header>
-			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html" style="color:#ff00ff">"zur
-					Magentacloud: Fotos Münsterland-Smarties"</a></h1>
-			<p> Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br>
-				Sende mir eine Nachricht um Zugang zu erhalten </p>
-			</header>
-			<p></p>
-			<p>
-			<h3>2019-12-01</h3>
-			Weihnachtstreff mit allen Freunden der Münsterland-Smarties
-			</p>
-			<p>
-			<h3>2019-05-11</h3>
-			10 Jahre Münsterland-Smarties
-			</p>
-			<p>
-			<h3>2016-08-26/27</h3>
-			Die MLS fahren zu den Smart-Times nach Hamburg. <br>
-			na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar
-			Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen
-			schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen.
-			So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: <br>
-			Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432
-			Rheine). <br>
-			Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076
-			Osnabrück) <br>
-			Feedback: <br>
-			Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time gehabt
-			... hier ein paar Eindrücke von den MLS in Hamburg.
-			</p>
-			<p>
-			<h3>2015-06-27</h3> <br>
-			smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
-			Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
-			</p>
-			<p>
-			<h3>2015-04-18</h3> <br>
-			Proud to be Smart in Hamm <br>
-			Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein
-			schöner Tag mit tollem Wetter und netten Gesprächen.
-			Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder.
-			</p>
-			<p>
-			<h3>2014-05-10</h3> <br>
-			Sammeltuning und Angrillen bei RS-Parts in Witten <br>
-			Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das
-			Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen.
-			Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke:
-			</p>
-			<p>
-			<h3>2014-04-18</h3> <br>
-			Die MLS machen CarFreitag <br>
-			Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum
-			CarFreitag getroffen haben.
-			Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir
-			netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke:
-			</p>
-			<p>
-			<h3>2013-09-29</h3> <br>
-			Proud to be smart - Smart-Center Hamm <br>
-			Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\"
-			Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.
-			So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und
-			das Wetter hat netterweise auch super mitgespielt.
-			</p>
-			<p>
-			<h3>2013-09-15</h3> <br>
-			Das MLS T-Shirt <br>
-			Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause.
-			Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\
-			Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging
-			nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte.
-			</p>
-			<p>
-			<h3>2013-08-24</h3> <br>
-			Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt.
-			</p>
-			<p>
-			<h3>2013-06-08</h3> <br>
-			Smart Sound bei Dirk
-			</p>
-			<p>
-			<h3>2012-11-03</h3> <br>
-			MLS Schraubersonntag <br>
-			Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen
-			und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier
-			ein kleiner Eindruck:
-			</p>
-			<p>
-			<h3>2012-09-16</h3> <br>
-			MLS Septembertreffen mit Teuto Ausfahrt <br>
-			Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über
-			den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat.
-			Wieder Mal ein schöner Tag.
-			</p>
+			<!-- Feature -->
+			<section id="foto-galerie">
+				<div class="container">
+					<header>
+						<h2>Foto Galerie</h2>
+						<h3>
+							<a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html" style="color:#ff00ff">"zur
+								Magentacloud: Fotos Münsterland-Smarties"
+							</a>
+						</h3>
+					</header>
+					<p> Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br>
+						Sende mir eine Nachricht um Zugang zu erhalten </p>
+					</header>
+					<p></p>
+					<p>
+					<h3>2019-12-01</h3>
+					Weihnachtstreff mit allen Freunden der Münsterland-Smarties
+					</p>
+					<p>
+					<h3>2019-05-11</h3>
+					10 Jahre Münsterland-Smarties
+					</p>
+					<p>
+					<h3>2016-08-26/27</h3>
+					Die MLS fahren zu den Smart-Times nach Hamburg. <br>
+					na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein
+					paar
+					Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen
+					schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen.
+					So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht:
+					<br>
+					Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432
+					Rheine). <br>
+					Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076
+					Osnabrück) <br>
+					Feedback: <br>
+					Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time
+					gehabt
+					... hier ein paar Eindrücke von den MLS in Hamburg.
+					</p>
+					<p>
+					<h3>2015-06-27</h3> <br>
+					smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
+					Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
+					</p>
+					<p>
+					<h3>2015-04-18</h3> <br>
+					Proud to be Smart in Hamm <br>
+					Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war
+					ein
+					schöner Tag mit tollem Wetter und netten Gesprächen.
+					Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder.
+					</p>
+					<p>
+					<h3>2014-05-10</h3> <br>
+					Sammeltuning und Angrillen bei RS-Parts in Witten <br>
+					Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das
+					Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen.
+					Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar
+					Eindrücke:
+					</p>
+					<p>
+					<h3>2014-04-18</h3> <br>
+					Die MLS machen CarFreitag <br>
+					Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan
+					zum
+					CarFreitag getroffen haben.
+					Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir
+					netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke:
+					</p>
+					<p>
+					<h3>2013-09-29</h3> <br>
+					Proud to be smart - Smart-Center Hamm <br>
+					Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be
+					smart\"
+					Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.
+					So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen
+					und
+					das Wetter hat netterweise auch super mitgespielt.
+					</p>
+					<p>
+					<h3>2013-09-15</h3> <br>
+					Das MLS T-Shirt <br>
+					Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause.
+					Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\
+					Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es
+					ging
+					nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte.
+					</p>
+					<p>
+					<h3>2013-08-24</h3> <br>
+					Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt.
+					</p>
+					<p>
+					<h3>2013-06-08</h3> <br>
+					Smart Sound bei Dirk
+					</p>
+					<p>
+					<h3>2012-11-03</h3> <br>
+					MLS Schraubersonntag <br>
+					Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar
+					Reparaturen
+					und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen.
+					Hier
+					ein kleiner Eindruck:
+					</p>
+					<p>
+					<h3>2012-09-16</h3> <br>
+					MLS Septembertreffen mit Teuto Ausfahrt <br>
+					Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto,
+					über
+					den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet
+					hat.
+					Wieder Mal ein schöner Tag.
+					</p>
 
-			<p>
-			<h3>2012-07-01</h3> <br>
-			MLS Grillen bei Dirk <br>
-			Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden
-			zum Grillen eingeladen.
-			Ein schöner Tag.
-			</p>
-		</section>
+					<p>
+					<h3>2012-07-01</h3> <br>
+					MLS Grillen bei Dirk <br>
+					Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in
+					Heiden
+					zum Grillen eingeladen.
+					Ein schöner Tag.
+					</p>
+				</div>
+			</section>
 
-		<!-- Banner -->
-		<section id="image-banner" class="image featured">
-			<img src="images/banner002.jpg" alt="" />
 
-		</section>
 
-		<!-- Main -->
-		<section id="main">
-			<div class="container">
-				<div class="row">
+			<!-- Main -->
+			<section id="main">
+				<div class="container">
+					<div class="row">
 
-					<!-- Content -->
-					<div id="content" class="col-8 col-12-medium">
+						<!-- Content -->
+						<div id="content" class="col-12">
 
-						<!-- Post -->
-						<article class="box post">
-							<header>
-								<h2>Die Smarties</h2>
-							</header>
-							<p>
-								Unsere Smarties: <a href="#picture">Fotos, ab in die Magentacloud</a> <br>
-								2022-02-18 <br>
-								Zur Erinnerung an Kai, <br>
-								Gründer und die Seele der Smarties. <br>
-								Du wirst uns immer im Gedächnis bleiben!
-							</p>
+							<!-- Post -->
+
 							<ul class="actions">
 								<li><a href="#" class="button icon solid fa-file">nach oben</a></li>
 							</ul>
-						</article>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- Footer -->
-		<section id="footer">
-			<div class="container">
-				<div class="col-12">
-					<section>
-						<div class="row">
-							<div class="col-6 col-12-small">
-								<ul class="icons">
-									<li class="icon solid fa-home">
-										49124 Georgsmarienhütte<br />
-										Niedersachsen<br />
-										D
-									</li>
-									<li class="icon solid fa-phone">
-										+49 - 170 - 310 - 4221
-									</li>
-									<li class="icon solid fa-envelope">
-										<a href="#">info@münsterland-smarties.de</a>
-									</li>
-								</ul>
+			</section>
+			<!-- Footer -->
+			<section id="footer">
+				<div class="container">
+					<div class="col-12">
+						<section>
+							<div class="row">
+								<div class="col-12">
+									<div data-tf-widget="PKab9dYr" data-tf-opacity="0" data-tf-iframe-props="title=münsterland-smarties"
+										data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
+									<script src="//embed.typeform.com/next/embed.js"></script>
+								</div>
 							</div>
-							<div class="col-6 col-12-small">
-								<ul class="icons">
-									<li class="icon brands fa-facebook-f">
-										<a href="https://www.facebook.com/muensterlandsmarties.html">facebook.com/muensterlandsmarties</a>
-									</li>
-								</ul>
+							<div class="row">
+								<div class="col-6 col-12-small">
+									<ul class="icons">
+										<li class="icon solid fa-home">
+											49124 Georgsmarienhütte<br />
+											Niedersachsen<br />
+											D
+										</li>
+										<li class="icon solid fa-phone">
+											+49 - 170 - 310 - 4221
+										</li>
+									</ul>
+								</div>
+								<div class="col-6 col-12-small">
+									<ul class="icons">
+										<li class="icon solid fa-envelope">
+											<a href="#">info@münsterland-smarties.de</a>
+										</li>
+										<li class="icon brands fa-facebook-f">
+											<a href="https://www.facebook.com/muensterlandsmarties.html">facebook.com/muensterlandsmarties</a>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-					</section>
+						</section>
+					</div>
 				</div>
-			</div>
-			<div id="copyright" class="container">
-				<ul class="links">
-					<li>&copy; Münsterland Smarites. </li>
-					<li><a href="/impressum.html">Impressum</a></li>
-				</ul>
-			</div>
-		</section>
+				<div id="copyright" class="container">
+					<ul class="links">
+						<li>&copy; Münsterland Smarites. </li>
+						<li><a href="/impressum.html">Impressum</a></li>
+					</ul>
+					<p>
 
+						Zur Erinnerung an Kai, <br>
+						Gründer und die Seele der Smarties. <br>
+						Du wirst uns immer im Gedächnis bleiben!
+					</p>
+				</div>
+			</section>
 	</div>
 
 	<!-- Scripts -->
