--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Strongly Typed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
 	<title>Münsterland Smarties</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -19,7 +15,6 @@
 		<!-- Header -->
 		<section id="header">
 			<div class="container">
-
 				<!-- Logo -->
 				<h1 id="logo"><a href="index.html">Münsterland Smarties</a></h1>
 				<p>Die Smarties aus dem Münsterland.</p>
@@ -31,7 +26,6 @@
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 					</ul>
 				</nav>
-
 			</div>
 		</section>
 
@@ -98,10 +92,8 @@
 							oder<br>
 							Alternativ am Offlumer See in 48485 Neuenkirchen, am Cafe Jedermann vorbei..
 						</section>
-
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
-
 						<!-- Feature -->
 						<section id="news">
 							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
@@ -138,11 +130,12 @@
 							</a>
 						</h3>
 					</header>
-					<p> Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br>
-						Sende mir eine Nachricht um Zugang zu erhalten </p>
-					</header>
-					<p></p>
 					<p>
+						Dieser Link führt dich zur MangentaCloud, <br>
+						zum Anschauen der Fotos benötigst du ein Passwort! <br>
+						Sende mir eine Nachricht um Zugang zu erhalten
+						</p>
+
 					<h3>2019-12-01</h3>
 					Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 					</p>
@@ -169,12 +162,12 @@
 					... hier ein paar Eindrücke von den MLS in Hamburg.
 					</p>
 					<p>
-					<h3>2015-06-27</h3> <br>
+					<h3>2015-06-27</h3>
 					smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
 					Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
 					</p>
 					<p>
-					<h3>2015-04-18</h3> <br>
+					<h3>2015-04-18</h3>
 					Proud to be Smart in Hamm <br>
 					Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war
 					ein
@@ -182,7 +175,7 @@
 					Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder.
 					</p>
 					<p>
-					<h3>2014-05-10</h3> <br>
+					<h3>2014-05-10</h3>
 					Sammeltuning und Angrillen bei RS-Parts in Witten <br>
 					Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das
 					Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen.
@@ -190,7 +183,7 @@
 					Eindrücke:
 					</p>
 					<p>
-					<h3>2014-04-18</h3> <br>
+					<h3>2014-04-18</h3>
 					Die MLS machen CarFreitag <br>
 					Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan
 					zum
@@ -199,7 +192,7 @@
 					netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke:
 					</p>
 					<p>
-					<h3>2013-09-29</h3> <br>
+					<h3>2013-09-29</h3>
 					Proud to be smart - Smart-Center Hamm <br>
 					Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be
 					smart\"
@@ -209,7 +202,7 @@
 					das Wetter hat netterweise auch super mitgespielt.
 					</p>
 					<p>
-					<h3>2013-09-15</h3> <br>
+					<h3>2013-09-15</h3>
 					Das MLS T-Shirt <br>
 					Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause.
 					Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\
@@ -218,15 +211,15 @@
 					nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte.
 					</p>
 					<p>
-					<h3>2013-08-24</h3> <br>
+					<h3>2013-08-24</h3>
 					Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt.
 					</p>
 					<p>
-					<h3>2013-06-08</h3> <br>
+					<h3>2013-06-08</h3>
 					Smart Sound bei Dirk
 					</p>
 					<p>
-					<h3>2012-11-03</h3> <br>
+					<h3>2012-11-03</h3>
 					MLS Schraubersonntag <br>
 					Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar
 					Reparaturen
@@ -235,7 +228,7 @@
 					ein kleiner Eindruck:
 					</p>
 					<p>
-					<h3>2012-09-16</h3> <br>
+					<h3>2012-09-16</h3>
 					MLS Septembertreffen mit Teuto Ausfahrt <br>
 					Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto,
 					über
@@ -245,7 +238,7 @@
 					</p>
 
 					<p>
-					<h3>2012-07-01</h3> <br>
+					<h3>2012-07-01</h3>
 					MLS Grillen bei Dirk <br>
 					Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in
 					Heiden
@@ -254,8 +247,6 @@
 					</p>
 				</div>
 			</section>
-
-
 
 			<!-- Main -->
 			<section id="main">
@@ -319,7 +310,6 @@
 						<li><a href="/impressum.html">Impressum</a></li>
 					</ul>
 					<p>
-
 						Zur Erinnerung an Kai, <br>
 						Gründer und die Seele der Smarties. <br>
 						Du wirst uns immer im Gedächnis bleiben!
