--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						Dieser Link führt dich zur MangentaCloud, <br>
 						zum Anschauen der Fotos benötigst du ein Passwort! <br>
 						Sende mir eine Nachricht um Zugang zu erhalten
-						</p>
+					</p>
 
 					<h3>2019-12-01</h3>
 					Weihnachtstreff mit allen Freunden der Münsterland-Smarties
@@ -268,54 +268,57 @@
 			<!-- Footer -->
 			<section id="footer">
 				<div class="container">
+					<header>
+						<h2>Fragen.. Neuigkeiten..? <strong>schreibe uns:</strong></h2>
+					</header>
 					<div class="col-12">
-						<section>
-							<div class="row">
-								<div class="col-12">
-									<div data-tf-widget="PKab9dYr" data-tf-opacity="0" data-tf-iframe-props="title=münsterland-smarties"
-										data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
-									<script src="//embed.typeform.com/next/embed.js"></script>
-								</div>
+						<div class="row">
+							<div class="col-12">
+								<div data-tf-widget="PKab9dYr" data-tf-opacity="0" data-tf-iframe-props="title=münsterland-smarties"
+									data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
+								<script src="//embed.typeform.com/next/embed.js"></script>
 							</div>
-							<div class="row">
-								<div class="col-6 col-12-small">
-									<ul class="icons">
-										<li class="icon solid fa-home">
-											49124 Georgsmarienhütte<br />
-											Niedersachsen<br />
-											D
-										</li>
-										<li class="icon solid fa-phone">
-											+49 - 170 - 310 - 4221
-										</li>
-									</ul>
-								</div>
-								<div class="col-6 col-12-small">
-									<ul class="icons">
-										<li class="icon solid fa-envelope">
-											<a href="#">info@münsterland-smarties.de</a>
-										</li>
-										<li class="icon brands fa-facebook-f">
-											<a href="https://www.facebook.com/muensterlandsmarties.html">facebook.com/muensterlandsmarties</a>
-										</li>
-									</ul>
-								</div>
+						</div>
+						<div class="row">
+							<div class="col-6 col-12-small">
+								<ul class="icons">
+									<li class="icon solid fa-home">
+										49124 Georgsmarienhütte<br />
+										Niedersachsen<br />
+										D
+									</li>
+									<li class="icon solid fa-phone">
+										+49 - 170 - 310 - 4221
+									</li>
+								</ul>
 							</div>
-						</section>
+							<div class="col-6 col-12-small">
+								<ul class="icons">
+									<li class="icon solid fa-envelope">
+										<a href="#">info@münsterland-smarties.de</a>
+									</li>
+									<li class="icon brands fa-facebook-f">
+										<a href="https://www.facebook.com/muensterlandsmarties.html">facebook.com/muensterlandsmarties</a>
+									</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div id="copyright" class="container">
-					<ul class="links">
-						<li>&copy; Münsterland Smarites. </li>
-						<li><a href="/impressum.html">Impressum</a></li>
-					</ul>
-					<p>
-						Zur Erinnerung an Kai, <br>
-						Gründer und die Seele der Smarties. <br>
-						Du wirst uns immer im Gedächnis bleiben!
-					</p>
-				</div>
+					</div>
 			</section>
+			</div>
+	<div id="copyright" class="container">
+		<ul class="links">
+			<li>&copy; Münsterland Smarites. </li>
+			<li><a href="/impressum.html">Impressum</a></li>
+		</ul>
+		<p>
+			Zur Erinnerung an Kai, <br>
+			Gründer und die Seele der Smarties. <br>
+			Du wirst uns immer im Gedächnis bleiben!
+		</p>
+	</div>
+	</section>
 	</div>
 
 	<!-- Scripts -->
