--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="#picture"><span>MLS-Fotos</span></a></li>
+						<li><a class="icon solid fa-home" href="#main"><span>MLS-Fotos</span></a></li>
 						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li>
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 					</ul>
@@ -94,7 +94,7 @@
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<!-- Feature -->
-						<section>
+						<section> id="news">
 							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
 							<header>
 								<h3>Neuigkeiten</h3>
@@ -123,7 +123,7 @@
 		<section id="main">
 			<div class="container">
 				<p>
-					18.02.2022 <br>
+				<h1>18.02.2022</h1> <br>
 					Zur Erinnerung an Kai, <br>
 					Gründer und die Seele der Smarties. <br>
 					Du wirst uns immer im Gedächnis bleiben!
