--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<!-- Feature -->
-						<section> id="news">
+						<section id="news">
 							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
 							<header>
 								<h3>Neuigkeiten</h3>
