--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="#main"><span>MLS-Fotos</span></a></li>
+						<li><a class="icon solid fa-home" href="#image-banner"><span>Smaries-Fotos</span></a></li>
 						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li>
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 					</ul>
@@ -120,7 +120,7 @@
 			<img src="images/banner002.jpg" alt="Banner Münsterland Smarties" />
 		</section>
 		<!-- Feature -->
-		<section id="main">
+		<section>
 			<div class="container">
 				<p>
 				<h1>18.02.2022</h1> <br>
