--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="#image-banner"><span>Smaries-Fotos</span></a></li>
+						<li><a class="icon solid fa-home" href="#image-banner"><span>Smarties-Fotos</span></a></li>
 						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li>
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 					</ul>
