--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 							zum Anschauen der Fotos benötigst du ein Passwort! <br>
 							Sende mir eine Nachricht um Zugang zu erhalten
 						</p>
+						<h3>Münsterland-Smarties User</h3>
 
 						<h3>2019-12-01</h3>
 						Weihnachtstreff mit allen Freunden der Münsterland-Smarties
