--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 							Sende mir eine Nachricht um Zugang zu erhalten
 						</p>
 						<h3>Münsterland-Smarties User</h3>
+						Das sind wir...
 						</p>
 						<p>
 						<h3>2019-12-01</h3>
