--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
 							nächster Termin:<br>
-							Samstag 18.02.2023:1800 Uhr<br>
-							Oriental Gormet<br>
-							Siemens Straße 2<br>
-							48599 Gronau
+							Karsamstag 08.04.2023:xxxx Uhr<br>
+							Lokalität:?<br>
+							Straße:?<br>
+							Ort:?
 							</p>
 						</section>
 					</div>
