--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 							dann mal auf einem Stammtisch begrüßen.<br>
 							nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
+							Eine Ausfahrt? Ideen.., Vorschäge? Bitte eine PN<br>
 							Lokalität:?<br>
 							Straße:?<br>
 							Ort:?
