--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 							<br>
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
+							! Browser aktualisieren - falls ihr noch einen vergangenen Termin seht !<br>
 							nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschäge? Bitte eine PN<br>
