--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 							<br>
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
-							<h4>! Browser aktualisieren - falls ihr einen vergangenen Termin seht !</h4><br>
+							<h4>! Browser aktualisieren - falls ihr einen vergangenen Termin seht !</h4>
 							nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschäge? <br>
-							Bitte eine PN<br>
+							PN: <li>href="#footer"><span>eMail an uns</span></a>Hier!</li><br>
 							Lokalität:?<br>
 							Straße:?<br>
 							Ort:?
