--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschäge? <br>
-							PN: href="#footer"><span>KLICK</span></a><br>
+							PN: <a href="#footer"><span>KLICK</span></a><br>
 							Lokalität:?<br>
 							Straße:?<br>
 							Ort:?
