--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschäge? <br>
 							PN: <a href="#footer"><span>KLICK</span></a><br>
-							Lokalität:?<br>
+							<h5> Lokalität:?<br>
 							Straße:?<br>
-							Ort:?
+							Ort:? </h5>
 							</p>
 						</section>
 					</div>
