--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 							<h4>! Browser aktualisieren - falls ihr einen vergangenen Termin seht !</h4>
 							nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
-							Eine Ausfahrt? Ideen.., Vorschäge? <br>
+							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							PN: <a href="#footer"><span>KLICK</span></a><br>
-							<h5> Lokalität:?<br>
+							<h6> Lokalität:?<br>
 							Straße:?<br>
-							Ort:? </h5>
+							Ort:? </h6>
 							</p>
 						</section>
 					</div>
