--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 							<br>
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
-							<h4>! Browser aktualisieren - falls ihr einen vergangenen Termin seht !</h4>
-							nächster Termin:<br>
+							<h3>Browser aktualisieren - falls ihr einen vergangenen Termin seht.</h3>
+							Nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							PN: <a href="#footer"><span>KLICK</span></a><br>
-							<h6> Lokalität:?<br>
+							<h3>Lokalität:?<br>
 							Straße:?<br>
-							Ort:? </h6>
+							Ort:?</h3>
 							</p>
 						</section>
 					</div>
