--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@
 							siehe auch unter "navpannel": "Neuigkeiten", den aktuellen Termin.
 							</p>
 							Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com <br>
-							oder auch im Smart-Forum.de finden<br>
-							Dort gehst Du einfach im Smart-Forum auf SMARTies Regional und wählst dann unseren Forumsbeitrag
-							Smarties im westlichen Münsterland ".... <br>
-							</li>
+							oder auch im Smart-Forum.de finden.<br>
+							Dort gehst Du einfach im Smart-Forum auf "SMARTies Regional" und wählst dann unseren Forumsbeitrag
+							"Smarties im westlichen Münsterland".<br>
 							<li class="icon brands fa-fa">
-								<a href="https://www.smart-forum.de.">Smart-Forum</a>
-							</li>
+								<a href="https://www.smart-forum.de">Smart-Forum</a>
 							</li>
 							<li class="icon brands fa-facebook-f">
 								<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
