--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<header>
 								<h3>Neuigkeiten</h3>
 							</header>
-							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
+							<p>Herzlich Willkommen in Neuigkeiten der Münsterland-Smarties.</p>
 							Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren.
 							<br>
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
