--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 							</header>
 							<p> Wann und wo treffen wir uns? </p>
 							Der Stammtisch Münsterland trifft sich jeden 2. Samstag im Monat, <br>
-							siehe auch unter "navpannel": "Neuigkeiten", den aktuellen Termin.
-							</p>
+							siehe auch unter "navpannel": "Neuigkeiten", den aktuellen Termin.<br>
 							Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.com <br>
 							oder auch im Smart-Forum.de finden.<br>
 							Dort gehst Du einfach im Smart-Forum auf "SMARTies Regional" und wählst dann unseren Forumsbeitrag
@@ -81,7 +80,6 @@
 							<li class="icon brands fa-facebook-f">
 								<a href="https://www.facebook.com/groups/479318872161904/?ref=share">facebook.com/stammtisch</a>
 							</li>
-							<p></p>
 							"Unsere alten MLS Treffpunkte":<br>
 							http://www.cafe-jedermann.de <br>
 							Wettringer Str. 60 <br>
@@ -98,8 +96,7 @@
 								<h3>Neuigkeiten</h3>
 							</header>
 							<p>Herzlich Willkommen in Neuigkeiten der Münsterland-Smarties.</p>
-							Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren.
-							<br>
+							Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren.<br>
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
 							<h3>Browser aktualisieren - falls ihr einen vergangenen Termin seht.</h3>
