--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
 							<h3>Browser aktualisieren - falls ihr einen vergangenen Termin seht.</h3>
+							<h3>11.03.2023:1830 Uhr<br>
+							Orientel Gourmet<br>
+							Siemensstraße 2<br>
+							48599 Gronau</h3><br>
 							Nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
