--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<section>
 							<a href="#" class="image featured"><img src="images/BBrechts.jpg" alt="" /></a>
 							<header>
-								<h3>Hier treffen sich Smart-Freunde,
+								<h3>Hier treffen sich Smart-Freunde,</h3>
 							</header>
 							<p>die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb,
 								die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
@@ -53,7 +53,7 @@
 							Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen
 							und können nähere Informationen über unsere Veranstaltungen erhalten oder uns auch ganz unverbindlich an
 							einem der Stammtischtermine besuchen kommen.</p>
-							</h3>
+							
 
 							</p>
 						</section>
@@ -100,10 +100,10 @@
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
 							<h3>Browser aktualisieren - falls ihr einen vergangenen Termin seht.</h3>
-							<h3>11.03.2023:1830 Uhr<br>
-							Orientel Gourmet<br>
-							Siemensstraße 2<br>
-							48599 Gronau</h3><br>
+							<h3>11.03.2023:1830 Uhr</h3><br>
+							<h3>Orientel Gourmet</h3><br>
+							<h3>Siemensstraße 2</h3><br>
+							<h3>48599 Gronau</h3><br>
 							Nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
