--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 							Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch
 							dann mal auf einem Stammtisch begrüßen.<br>
 							<h3>Browser aktualisieren - falls ihr einen vergangenen Termin seht.</h3>
-							<h3>11.03.2023:1830 Uhr</h3><br>
-							<h3>Orientel Gourmet</h3><br>
-							<h3>Siemensstraße 2</h3><br>
-							<h3>48599 Gronau</h3><br>
+							11.03.2023:1830 Uhr<br>
+							Orientel Gourmet<br>
+							Siemensstraße 2<br>
+							48599 Gronau<br>
 							Nächster Termin:<br>
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							PN: <a href="#footer"><span>KLICK</span></a><br>
-							<h3>Lokalität:?<br>
+							Lokalität:?<br>
 							Straße:?<br>
-							Ort:?</h3>
+							Ort:?
 							</p>
 						</section>
 					</div>
