--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							PN: <a href="#footer"><span>KLICK</span></a><br>
-							Lokalität:?<br>
-							Straße:?<br>
-							Ort:?
+							Lokalität:? Straße:? Ort:?
 							</p>
 						</section>
 					</div>
