--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							dann mal auf einem Stammtisch begrüßen.<br>
 							
 							<h3>Unsere Termine:</h3>
-							Browser aktualisieren - falls ihr einen vergangenen Termin seht.<br>
+							Browser aktualisieren <br>- falls ihr einen vergangenen Termin seht.<br>
 						     <p></p>
 						     <p>11.03.2023:1830 Uhr<br>
 							Orientel Gourmet<br>
