--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							Lokalität:? Straße:? Ort:?<br>
 							</p>
-							PN: <a href="#footer"><span>KLICK</span></a><br>
+							<a PN: <a href="#footer"><span>KLICK</span></a><br>
 							
 						</section>
 					</div>
