--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
 							Karsamstag 08.04.2023:xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							Lokalität:? Straße:? Ort:?<br>
-							
-						     <a href="#footer"><span>PN: KLICK hier</span></a><br>
+						     <li class="icon brands fa-fa">
+								<a href="#footer"><span>PN: KLICK hier</a>
+							</li>
+						     <a href="#footer"><span>PN: KLICK hier</span></a>
 							
 						</section>
 					</div>
