--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 						    <h3>Unsere Termine:</h3>	
 							Browser aktualisieren <br>- falls ihr einen vergangenen Termin seht.<br>
 						     </p>
-						     <p>11.03.2023:1830 Uhr<br>
-							Orientel Gourmet<br>
-							Siemensstraße 2<br>
-							48599 Gronau<br>
+						     <p>09.12.2023:1830 Uhr<br>
+							Else am See /Anmeldungen bei Nicole <br>
+							Drievordener Straße 95 2<br>
+							48465 Schüttorf<br>
 							</p>
 						        Nächster Termin:<br>
 							
-							Karsamstag 08.04.2023:xxxx Uhr<br>
+							Karsamstag/ Frühjahr xx,xx,2024 :xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							Lokalität:? Straße:? Ort:?<br>
 						     <li class="icon brands fa-fa">
