--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 							Browser aktualisieren <br>- falls ihr einen vergangenen Termin seht.<br>
 						     </p>
 						     <p>09.12.2023:1830 Uhr<br>
-							Else am See /Anmeldungen bei Nicole <br>
+							Wheinachtsstammtisch /Anmeldungen bei Nicole <br>
+							Veranstaltungsort: <br>
+							Else am See  <br>
 							Drievordener Straße 95 2<br>
 							48465 Schüttorf<br>
 							</p>
