--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 							Browser aktualisieren <br>- falls ihr einen vergangenen Termin seht.<br>
 						     </p>
 						     <p>09.12.2023:1830 Uhr<br>
-							Wheinachtsstammtisch /Anmeldungen bei Nicole <br>
-							Veranstaltungsort: <br>
-							Else am See  <br>
-							Drievordener Straße 95 2<br>
-							48465 Schüttorf<br>
+							!Anmeldungen bei Nicole ! <br>
+							Veranstaltungsort: siehe Facebook! <br>
+							Titel <br>
+							Straße <br>
+							PLZ Ort<br>
 							</p>
 						        Nächster Termin:<br>
 							
-							Karsamstag/ Frühjahr xx,xx,2024 :xxxx Uhr<br>
+							*** jeden dritten Samstag im Monat *** xx,xx,Jahr :xxxx Uhr<br>
 							Eine Ausfahrt? Ideen.., Vorschläge? <br>
 							Lokalität:? Straße:? Ort:?<br>
 						     <li class="icon brands fa-fa">
