--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+t<!DOCTYPE HTML>
 
 <html>
 
@@ -104,7 +104,7 @@
 						    <h3>Unsere Termine:</h3>	
 							Browser aktualisieren <br>- falls ihr einen vergangenen Termin seht.<br>
 						     </p>
-						     <p>09.12.2023:1830 Uhr<br>
+						     <p>Datum:Uhrzeit Uhr<br>
 							!Anmeldungen bei Nicole ! <br>
 							Veranstaltungsort: siehe Facebook! <br>
 							Titel <br>
