--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ t<!DOCTYPE HTML>
 				<header>
 					<h2>Foto Galerie</h2>
 					<h3>
-						<a href="https://magentacloud.de/s/CnXzSBNk5eaX4dM" style="color:#ff00ff">"zur
+						<a href="https://magentacloud.de/s/CnXzSBNk5eaX4dM.html" style="color:#ff00ff">"zur
 							Magentacloud: Fotos Münsterland-Smarties"
 						</a>
 					</h3>
