--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ t<!DOCTYPE HTML>
 				<header>
 					<h2>Foto Galerie</h2>
 					<h3>
-						<a href="https://magentacloud.de/s/CnXzSBNk5eaX4dM/authenticate/showshare"> style="color:#ff00ff">"Fotos Münsterland-Smarties</a>
+						<a href="https://magentacloud.de/s/CnXzSBNk5eaX4dM/authenticate/showshare" style="color:#ff00ff">"Fotos Münsterland-Smarties</a>
 					</h3>
 				</header>
 				<div class="row">
