--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ t<!DOCTYPE HTML>
 				<header>
 					<h2>Foto Galerie</h2>
 					<h3>
+						
+					<li class="icon brands fa-fa">
 						<a href="https://www.magentacloud.de/s/CnXzSBNk5eaX4dM" style="color:#ff00ff">Fotos Münsterland-Smarties</a>
 					</h3>
 				</header>
