--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ t<!DOCTYPE HTML>
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="#image-banner"><span>Smarties+Fotos</span></a></li>
-						<li><a class="icon solid fa-home" href="#news"><span>Neuigkeiten</span></a></li>
+					
+						<li><a class="icon solid fa-home" href="#news"><span>Domäne zu verkaufen</span></a></li>
 						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 					</ul>
 				</nav>
@@ -229,5 +229,6 @@ t<!DOCTYPE HTML>
 </body>
 
 </html>
+
 
 
