--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ t<!DOCTYPE HTML>
 					<ul>
 					
 						<li><a class="icon solid fa-home" href="#news"><span>Domäne zu verkaufen</span></a></li>
-						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
+						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns - siehe unten</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -172,7 +172,7 @@ t<!DOCTYPE HTML>
 		<section id="footer">
 			<div class="container">
 				<header>
-					<h2>Fragen.. Neuigkeiten..? <strong>schreibe uns:</strong></h2>
+					
 				</header>
 				<div class="row">
 					<div class="col-12">
@@ -229,6 +229,7 @@ t<!DOCTYPE HTML>
 </body>
 
 </html>
+
 
 
 
