--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@ t<!DOCTYPE HTML>
 				<header>
 				
 			<p>
-				<h3>out of function</h3> <br>
+				<header>
+				<h3>out of function</h3> 
+					<header>
 				<p>
 				</header>
 				<div class="row">
@@ -230,6 +232,7 @@ t<!DOCTYPE HTML>
 </body>
 
 </html>
+
 
 
 
